--- a/haskell checkers/tui.cabal
+++ b/haskell checkers/tui.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.1.
+-- This file has been generated from package.yaml by hpack version 0.31.2.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e8025003279bca14812e30c9e0b2469ac972fa2b30e19167ba61336867c9bcb3
+-- hash: ff02260963f8a6eecc2c171d1a7618158110b9031b6b7da1f57cb53fd75c2db2
 
 name:           tui
 version:        0.0.0.1
@@ -43,5 +43,6 @@ executable tui
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , microlens-platform
     , tui
   default-language: Haskell2010
