--- a/haskell checkers/tui.cabal
+++ b/haskell checkers/tui.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2c23d933e2bb359c43259f149b0a84b468b076558d553305a112c0c05f3b41aa
+-- hash: 6bc0ec7928c806ce1d12ce3c402d45ae8e56119bb91d6422937532dc29245884
 
 name:           tui
 version:        0.0.0.1
@@ -21,6 +21,7 @@ library
   exposed-modules:
       Checkers
       GameLogic
+      GameStructures
       Moves
   other-modules:
       Paths_tui
